# lyrics_video_generator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN (1).md  GUIDE.md  LICENSE  New_Design.md  PRESENTATION.md  README.md  build.spec  entitlements.plist  package.json  pyproject.toml  requirements.txt  setup_py2app.py  vercel.json
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml
assets/: icon.icns
docs/: MANUAL.md  signing.md
hooks/: rthook_macos_nsbundle.py
scripts/: build_and_sign.sh  take_screenshots.py
src/animations/: scroll.py
src/api/: main.py
src/cli/: main.py
src/core/: ai_transcriber.py  lyrics_parser.py  song_resolver.py  text_renderer.py  theme_loader.py  video_generator.py
src/gui/: audio_player.py  main.py  main_window.py  styles.py
src/gui/dialogs/: import_song_dialog.py  new_song_dialog.py
src/gui/panels/: export_bar.py  preview_panel.py  song_selector.py  theme_editor.py  timeline_editor.py  transport_controls.py
themes/: 3a-regrets.json  3am-regrets.json  careers.json  default.json  narrow-center-column.json  who's-going.json
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/dashboard/: SongSelector.css  SongSelector.tsx  ThemeEditor.css  ThemeEditor.tsx  WebTimeline.css  WebTimeline.tsx
web/src/data/: blogs.ts
web/src/pages/: Blog.css  BlogDetail.tsx  BlogList.tsx  Dashboard.css  Dashboard.tsx  LandingPage.css  LandingPage.tsx
web/src/styles/: variables.css
web/src/types/: index.ts
(+14 files in other folders)
