[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyric-video-generator"
version = "0.1.0"
description = "Generate lyric videos with timed text animations"
requires-python = ">=3.10"
dependencies = [
    "moviepy>=2.0.0",
    "Pillow>=10.0.0",
    "click>=8.0.0",
    "numpy>=1.24.0",
    "PyQt6>=6.6.0",
    "imageio-ffmpeg>=0.4.9",
]

[project.scripts]
lyric-video = "src.cli.main:cli"
lyric-video-gui = "src.gui.main:main"

[tool.setuptools.packages.find]
include = ["src*"]
